--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@
 	.prose-boring {
 		@apply
 		prose
-		prose-slate
+		prose-zinc
 		prose-2xl
 		lg:prose-base
 		text-4xl
@@ -14,13 +14,13 @@
 		max-w-none
 		prose-pre:rounded-none
 		prose-headings:bg-amber-100
-		prose-headings:text-slate-800 
+		prose-headings:text-zinc-800 
 		prose-headings:font-normal
 		prose-headings:p-2
 		prose-headings:w-max
 		prose-headings:font-serif
 		dark:prose-invert
-		dark:prose-headings:bg-indigo-900
-		dark:prose-headings:text-slate-300
+		dark:prose-headings:bg-amber-900
+		dark:prose-headings:text-zinc-300
 	}
 }
