--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,39 +1,36 @@
 {% macro header(components, is_page) %}
-<div class="sticky top-0 bg-slate-100 dark:bg-slate-800">
-    <div class="container mx-auto flex place-content-between
-        py-16 lg:py-8 font-sans text-6xl lg:text-2xl text-slate-900
-        dark:text-slate-300">
-        <div class="flex">
+<div class="top-0 bg-zinc-100 dark:bg-amber-900">
+    <div class="container mx-auto flex flex-col
+        py-16 lg:py-8 font-sans text-zinc-900 text-6xl lg:text-4xl gap-4
+        dark:text-zinc-300 ">
+        <a href="/" class="hover:underline">
+            <h1>Richard Laughlin's Blog</h1>
+        </a>
+        <div class="font-sans text-4xl lg:text-xl text-zinc-900
+        dark:text-zinc-300">
+        {% if components | length != 1 %}
             {% set_global rel_url = "/" %}
             {% for component in components %}
             {% set_global rel_url = rel_url ~ component ~ '/' %}
-            {% if not loop.last %}
-            <a class="m-0 p-0 text-slate-900 hover:text-slate-700
-                            dark:text-slate-300 dark:hover:text-slate-200" href="{{ rel_url }}">
-                /{{ component }}
-            </a>
+            {% if loop.first %}
+            <a class="m-0 p-0 text-zinc-900 hover:text-zinc-700
+                            dark:text-zinc-300 dark:hover:text-zinc-200" href="{{ rel_url }}">
+                <i class="las la-home"></i>
+            </a>&nbsp;/&nbsp;
+            {% elif loop.last %}
             {% elif is_page %}
-            {% else %}
-            <div class="m-0 p-0 text-slate-700 dark:text-slate-200">
-                /{{ component }}
-            </div>
+            <a class="m-0 p-0 text-zinc-900 hover:text-zinc-700
+                            dark:text-zinc-300 dark:hover:text-zinc-200 underline" href="{{ rel_url }}">
+                {{ component }}
+            </a>&nbsp;/&nbsp;
             {% endif %}
             {% endfor %}
+        {% else %}
+            <p>{{config.extra.blog_intro}}</p>
+        {% endif %}
         </div>
-        <div class="flex gap-4">
-            <div id="back-to-top" class="hidden cursor-pointer">
-                <i class="las la-level-up-alt"></i>
-            </div>
-            <a href="/"><i class="las la-home"></i></a>
-            <div id="darkmode-toggle" class="cursor-pointer">
-                <div class="hidden dark:inline">
-                    <i class="las la-sun"></i>
-                </div>
-                <div class="inline dark:hidden">
-                    <i class="las la-moon"></i>
-                </div>
-            </div>
-        </div>
+        
     </div>
 </div>
+
 {% endmacro head %}
