--- a/templates/404.html
+++ b/templates/404.html
@@ -2,16 +2,16 @@
 
 {% block content %}
     <div class="h-screen w-screen flex flex-col items-center justify-center">
-        <div class="font-serif text-8xl text-slate-800 dark:text-slate-400">
+        <div class="font-serif text-8xl text-zinc-800 dark:text-zinc-400">
             404
         </div>
-        <div class="flex items-center gap-1 text-4xl text-slate-500">
-            <div class="p-2 hover:bg-slate-800 transition">
+        <div class="flex items-center gap-1 text-4xl text-zinc-500">
+            <div class="p-2 hover:bg-zinc-800 transition">
                 <a href="javascript:history.back()">
                     <i class="las la-arrow-left"></i>
                 </a>
             </div>
-            <div class="p-2 hover:bg-slate-800 transition">
+            <div class="p-2 hover:bg-zinc-800 transition">
                 <a href="/">
                     <i class="las la-home"></i>
                 </a>
