--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth dark">
     <head>
         <meta charset="utf-8">
 
@@ -18,11 +18,10 @@
 
         <link rel="stylesheet" href="/css/style.css"/>
         <link rel="stylesheet" href="/line-awesome/css/line-awesome.min.css"/>
-        <script src="/js/main.js" defer></script>
         {% block head_extend %}{% endblock %}
     </head>
 
-    <body class="bg-white dark:bg-slate-900 transition ease-in-out">
+    <body class="dark:bg-zinc-900 transition ease-in-out">
         <section>
             {% block content %}{% endblock %}
         </section>
