--- a/templates/index.html
+++ b/templates/index.html
@@ -6,33 +6,38 @@
 
 {% block content %}
 <div class="h-screen lg:h-auto lg:w-screen flex flex-col lg:flex-row space-y-16 
-            lg:space-y-0 items-center lg:items-start lg:text-left">
-    {% if config.extra.homepage_img_url %}
-        <img
-            src="{{ config.extra.homepage_img_url }}"
-            class="object-cover h-1/2 w-full lg:h-screen lg:w-1/2"/>
-    {% endif %}
+            lg:space-y-0 items-center lg:items-start lg:text-left dark">
+    <img
+        src="{{ config.extra.homepage_img_url }}"
+        class="object-cover h-1/2 w-full lg:h-screen lg:w-1/2"/>
     <div class="lg:h-screen lg:w-1/2 flex items-center">
         <div class="mx-16 flex flex-col space-y-16 lg:space-y-4">
-            <h1 class="font-serif text-8xl lg:text-4xl text-slate-900 dark:text-slate-300">
-                {{ config.extra.homepage_title }}
+            <h1 class="font-serif text-8xl lg:text-6xl text-zinc-900 dark:text-zinc-300">
+                Richard Laughlin
             </h1>
-            <p class="font-sans text-5xl lg:text-xl text-slate-600 dark:text-slate-500">
-                {{ config.extra.homepage_subtitle }}
+            <p class="font-sans text-5xl lg:text-xl text-zinc-600 dark:text-zinc-500">
+                Research Software Engineer
             </p>
             {% block homepage_content_extend %}
-                <div class="mt-4 text-5xl lg:text-xl">
-                    <a class="font-sans text-gray-500 hover:text-gray-400
-                        dark:text-slate-500 dark:hover:text-slate-400 transition"
+            <div class="mt-4 text-5xl lg:text-xl">
+                <a class="font-sans
+                    dark:text-zinc-500 dark:hover:text-zinc-400 transition"
+                    href="/about">
+                    <i class="las la-arrow-right"></i> About 
+                </a>
+            </div>    
+            <div class="mt-4 text-5xl lg:text-xl">
+                    <a class="font-sans
+                        dark:text-zinc-500 dark:hover:text-zinc-400 transition"
                         href="/blog">
-                        Visit my blog <i class="las la-arrow-right"></i>
+                        <i class="las la-arrow-right"></i> Blog 
                     </a>
                 </div>
                 {% block social %}
                     {% if config.extra.social %}            
                         <div class="mt-4 text-8xl lg:text-4xl flex gap-2">
                             {% for i in config.extra.social %}
-                                <div class="text-slate-500 hover:text-slate-700 transition">
+                                <div class="text-zinc-500 hover:text-zinc-700 transition">
                                 <a href="{{ i.url }}" target="_blank">
                                     <i class="{{ i.icon }}"></i>
                                 </a>
