--- a/templates/page.html
+++ b/templates/page.html
@@ -7,17 +7,25 @@
 {% endblock head_extend %}
 
 {% block content %}
+    {% if not page.extra.no_header %}
     {{ macros::header(components=page.components, is_page=true) }}
     <div class="container mb-16">
-        <div class="mt-4 font-serif text-slate-600 dark:text-slate-500 text-4xl lg:text-base">
+        <div class="mt-4 font-serif text-zinc-600 dark:text-zinc-500 text-4xl lg:text-base">
             {{ page.date | date(format="%Y-%m-%d") }}
         </div>
-        <h1 class="w-full mt-4 mb-8 font-serif text-8xl lg:text-4xl text-slate-900 dark:text-slate-300">
+        <h1 class="w-full mt-4 mb-8 font-serif text-8xl lg:text-4xl text-zinc-900 dark:text-zinc-300">
             {{ page.title }}
         </h1>
-        <div class="w-100 border-t mb-8 border-slate-300 dark:border-slate-700"></div>
+        <div class="w-100 border-t mb-8 border-zinc-300 dark:border-zinc-700"></div>
         <div class="prose-boring">
             {{ page.content | safe }}
         </div>
     </div>
+    {% else %}
+    <div class="prose-boring">
+        <div class="container mb-16">
+            {{ page.content | safe }}
+        </div>
+    </div>
+    {% endif %}
 {% endblock content %}
